--- a/index.html
+++ b/index.html
@@ -1915,24 +1915,24 @@
 			</div>
 		</section>
     
-    <section class="section community" id="community">
+    <section class="section newsletter info" id="newsletter">
 			<div class="container">
-        <a name="coc"><h2 class="info__title">Code of Conduct</h2></a>
+        <a class="help__link name="coc"><h2 class="info__title">Code of Conduct</h2></a>
 
 				<div class="info__desc">
 					<p class="info__p"All attendees, speakers, sponsors and volunteers at React Amsterdam 2018 are required to follow this code of conduct. Organisers will enforce it throughout the event. We expect cooperation from all participants to help ensure a safe environment for everybody.</p>
 
 					<p class="info__p">In case you need help or assistance, don't hesitate to approach our crew (wearing branded T-shirts), send an email to hi@react.amsterdam or call our colleague Robert at +31 618 699 604.</p>
           <h3 class="schedule-list__title">Short Version</h3>
-          <p class="schedule-list__p">Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organisers.</p>
+          <p class="schedule-list__p">Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organisers.<br/></p>
           <h3 class="schedule-list__title">Long Version</h3>
           <p class="schedule-list__p">Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
           <p class="schedule-list__p">Participants asked to stop any harassing behavior are expected to comply immediately.</p>
           <p class="schedule-list__p">Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment. If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
           <p class="schedule-list__p">If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they'll be wearing branded clothing and/or badges. Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
           <p class="schedule-list__p">We expect participants to follow these rules at conference and workshop venues and conference-related social events</p>
-          <p class="schedule-list__p">Original source and credit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> & The Ada Initiative
-            <br/>Please help by translating or improving: <a href="http://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a>
+          <p class="schedule-list__p">Original source and credit: <a class="help__link href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> & The Ada Initiative
+            <br/>Please help by translating or improving: <a class="help__link href="http://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a>
             <br/>This work is licensed under a Creative Commons Attribution 3.0 Unported License
           </p>
           
